Add data validation script and fix walkability transit scores
- Add validate-data.ts script to check:
  - Percentage fields bounded 0-100
  - Race percentages sum to ~100%
  - Age percentages sum to ~100%
  - Political percentages sum reasonably
  - Scores bounded 0-100

- Fix walkscore-pull route:
  - Use fallback data for transit scores (EPA D4A isn't comparable)
  - Add bounds checking to ensure all scores are 0-100
  - Clamp negative values

- Add npm run validate command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx scripts/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "validate": "tsx scripts/validate-data.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
