Implement score normalization with UI enhancements
Scoring changes:
- Add range-based normalization for climate using U.S. geographic extremes
- Add percentile ranking for QoL metrics (equal pull across sub-metrics)
- Add logarithmic "critical mass" curve for minority community presence
- Change all fallback scores from 70 to 50 (national average baseline)

UI enhancements:
- Add relative score indicators (+X/-X/avg) to RankingTable
- Add tooltips explaining above/below national average
- Add dashed 50-line reference to radar chart (national avg)
- Update city detail ScoreCard with visual indicators
- Add "Understanding Your Scores" section to help page
- Add "Real-World Anchor Points" with concrete examples
- Fix help page to show 5 categories, match icon colors

Testing:
- Add test-normalization.ts script (npm run test:normalization)
- All 16 normalization tests passing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "tsx scripts/seed.ts",
     "db:studio": "prisma studio",
-    "validate": "tsx scripts/validate-data.ts"
+    "validate": "tsx scripts/validate-data.ts",
+    "test:normalization": "tsx scripts/test-normalization.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
