--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:seed": "tsx scripts/seed.ts",
     "db:studio": "prisma studio",
     "validate": "tsx scripts/validate-data.ts",
-    "test:normalization": "tsx scripts/test-normalization.ts"
+    "test:normalization": "tsx scripts/test-normalization.ts",
+    "process-images": "tsx scripts/process-city-images.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
@@ -33,6 +34,7 @@
     "@tanstack/react-query": "^5.90.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -52,6 +54,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
